--- a/app/css/main.css
+++ b/app/css/main.css
@@ -4862,6 +4862,10 @@ a.text-dark:hover, a.text-dark:focus {
   font-family: "Raleway_Bold";
   src: url("./../fonts/Raleway/Raleway-Bold.ttf") format("truetype"); }
 
+@font-face {
+  font-family: "Storytella";
+  src: url("./../fonts/Storytella/Storytella.ttf") format("truetype"); }
+
 /*!
  * Font Awesome Free 5.12.1 by @fontawesome - https://fontawesome.com
  * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
@@ -9322,22 +9326,37 @@ readers do not read off random characters that represent icons */
   .body {
     width: 100%; } }
 
+/*@else {
+      @warn ("Error, enter your breakpoint in map");
+    }*/
 @media (min-width: 992px) and (max-width: 1199px) {
   .body {
     width: 100%; } }
 
+/*@else {
+      @warn ("Error, enter your breakpoint in map");
+    }*/
 @media (min-width: 768px) and (max-width: 991px) {
   .body {
     width: 100%; } }
 
+/*@else {
+      @warn ("Error, enter your breakpoint in map");
+    }*/
 @media (min-width: 576px) and (max-width: 767px) {
   .body {
     width: 100%; } }
 
+/*@else {
+      @warn ("Error, enter your breakpoint in map");
+    }*/
 @media (min-width: 0) and (max-width: 575px) {
   .body {
     width: 100%; } }
 
+/*@else {
+      @warn ("Error, enter your breakpoint in map");
+    }*/
 .header {
   background: url("../img/header/header_bgnd.png");
   height: 1631px; }
@@ -9405,14 +9424,23 @@ readers do not read off random characters that represent icons */
   .navbar__collapse {
     display: block !important; } }
 
+/*@else {
+      @warn ("Error, enter your breakpoint in map");
+    }*/
 @media (min-width: 1200px) and (max-width: 1599px) {
   .navbar__collapse {
     display: block !important; } }
 
+/*@else {
+      @warn ("Error, enter your breakpoint in map");
+    }*/
 @media (min-width: 992px) and (max-width: 1199px) {
   .navbar__collapse {
     display: block !important; } }
 
+/*@else {
+      @warn ("Error, enter your breakpoint in map");
+    }*/
 @media (min-width: 768px) and (max-width: 991px) {
   .navbar__collapse {
     display: none;
@@ -9420,6 +9448,9 @@ readers do not read off random characters that represent icons */
   .navbar__toggler {
     display: inline-block; } }
 
+/*@else {
+      @warn ("Error, enter your breakpoint in map");
+    }*/
 @media (min-width: 576px) and (max-width: 767px) {
   .navbar__collapse {
     display: none;
@@ -9429,6 +9460,9 @@ readers do not read off random characters that represent icons */
   .navbar__toggler {
     display: inline-block; } }
 
+/*@else {
+      @warn ("Error, enter your breakpoint in map");
+    }*/
 @media (min-width: 0) and (max-width: 575px) {
   .navbar__collapse {
     display: none;
@@ -9448,8 +9482,47 @@ readers do not read off random characters that represent icons */
     display: inline-block;
     margin-right: 25px; } }
 
+/*@else {
+      @warn ("Error, enter your breakpoint in map");
+    }*/
 .btn {
   display: inline-block;
   font-family: Raleway_Bold;
   font-size: 12px;
   color: #1b1b1b; }
+
+.slogan {
+  font-family: Storytella; }
+  .slogan_header {
+    font-size: 200px;
+    color: white;
+    font-weight: 400;
+    margin-top: 193px;
+    line-height: 1em;
+    padding: 0; }
+
+@media (min-width: 768px) and (max-width: 991px) {
+  .slogan_header {
+    margin-top: 120px;
+    font-size: 180px; } }
+
+/*@else {
+      @warn ("Error, enter your breakpoint in map");
+    }*/
+@media (min-width: 576px) and (max-width: 767px) {
+  .slogan_header {
+    margin-top: 100px;
+    font-size: 160px; } }
+
+/*@else {
+      @warn ("Error, enter your breakpoint in map");
+    }*/
+@media (min-width: 0) and (max-width: 575px) {
+  .slogan_header {
+    margin-top: 80px;
+    font-size: 130px;
+    text-align: center; } }
+
+/*@else {
+      @warn ("Error, enter your breakpoint in map");
+    }*/
