--- a/app/sass/_my-variables.scss
+++ b/app/sass/_my-variables.scss
@@ -2,7 +2,8 @@ $header: (
 
     nav-link-color: rgb(255,255,255),
     nav-link-border-hov: rgb(252,219,90),
-    nav-btn-col-hov: rgb(252,219,90)
+    nav-btn-col-hov: rgb(252,219,90),
+    slogan-col: rgb(255,255,255)
 
 
 )
